# robbyga

./: README.md  autogen.sh  config.h.in  configure  configure.ac
src/: Makefile.am  consts.h  ga.c  ga.h  main.c  robby.c  robby.h  utils.c  utils.h  world.c  world.h
src/outputs/: elite.csv  roulette.csv  selections.plot
