AM_CPPFLAGS = 
AM_CFLAGS = -O0 \
            -ggdb \
            -g3 \
            -Wall

bin_PROGRAMS = robbyGA

robbyGA_SOURCES = main.c \
                  consts.h \
                  world.h world.c \
                  utils.h utils.c \
                  robby.h robby.c \
                  ga.h ga.c

robbyGA_LDFLAGS =
robbyGA_LDADD =

